k8s/nodejs-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api-service
  namespace: venky
spec:
    type: NodePort
    selector:
        app: nodejs-api-app
    type: ClusterIP
    ports:
        - name: tcp-port
        - port: 80
        targetPort: 3001
        protocol: TCP
