k8s/ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              serviceName: nodejs-api
              servicePort: 3001
            path: /
